[tool.poetry]
name = "atcoder-ganbaru"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atcoder_ganbaru"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
